# single-core-computing

./: CMakeLists.txt  Makefile  README.md
data/: data_generator.cpp  data_generator.hpp
for_supercomputer/: main.cpp
include/: array_types.hpp  linalg.hpp  timer.hpp
output/: charisma_output.txt
python/: main.py
src/: main.cpp
