cmake_minimum_required(VERSION 3.24)
project(program)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
set(CMAKE_CXX_STANDARD)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
include_directories(${program_SOURCE_DIR}/include)
set(SOURCE_DIR ${program_SOURCE_DIR}/src)
file(GLOB program_SRC CONFIGURE_DEPENDS "src/*.cpp")
add_executable(program ${program_SRC})
install(TARGETS program DESTINATION ${CMAKE_SOURCE_DIR}/bin)
